fixed css wrap

--- a/host/style.css
+++ b/host/style.css
@@ -47,14 +47,16 @@ body {
 .user_list {
     display: none;
     margin: auto;
-    width: min-content;
+    width: min(1000px, 95vw);
     min-width: min(1000px, 95vw);
     height: min-content;
-    min-height: min(500px, 95vh);
+    min-height: min(2rem, 95vh);
     background-color: #2f2f55;
     margin-top: 2rem;
     border-radius: 2.5rem;
     justify-content: center;
+    padding: 1rem;
+    flex-wrap: wrap;
 }
 
 .user_list_item {
